# electra_profiling

./: README.md
cpp_torchscript/: CMakeLists.txt  ts-infer.cpp
electra-master/electra-master/: run_finetuning.py
huggingface/: 128_electra_base_discriminator.py  128_electra_large_discriminator.py  128_electra_small_discriminator.py  8_electra_base_discriminator.py  electra_small_discriminator.py  electra_small_discriminator_batch.py  electra_small_discriminator_native_profiler.py  electra_small_discriminator_torchscript.py  electra_small_discriminator_torchscript_2.py  loading_exported_model.py  loading_exported_model_no_tokenizer.py  loading_exported_model_no_tokenizer_native_profile.py  loading_exported_model_no_tokenizer_tensorboard_to_test_multithreadding.py  tensor.pt
huggingface/differentsize_profiling/: electra_discriminator_for_tb.py  electra_discriminator_for_vtune.py
jinshim_profile/hf_squad_batch/: no_grad_v2_tb_electra_batchjob_dataloader.py  tb_electra_batchjob_dataloader.py  (+1 more)
omp_block_matmul/: omp_matmul.c  omp_matmul_gemm.c  test.c
transformer_dongbit/: actual_enc_for_vtune_eager_mode.py  actual_enc_for_vtune_jit_loadmodel.py  actual_enc_for_vtune_jit_savemodel.py  actual_enc_for_vtune_script_mode.py  actual_trm.py  actual_trm_native_profiling.py  actual_trm_native_profiling_batch.py  actual_trm_native_profiling_nonbatch.py  actual_trm_original_for_vtune_for_batch.py  actual_trm_original_for_vtune_for_batch_for_tensorboard.py  actual_trm_original_for_vtune_intel_saveloadver - 복사본.py  actual_trm_original_for_vtune_jitver.py  model.py  utils.py
(+29 files in other folders)
